stopwatch link, file rename

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
   <h3>JavaScript Projects:</h3>
 
   <div>
-    <a href="./form/index.html">Form</a>
+    <a href="./form/">Form</a>
   </div>
   <div>
-    <a href="./rock-paper-scissors-game/12r-rock-paper-scissors.html">Rock Paper Scissors game</a>
+    <a href="./rock-paper-scissors-game/">Rock Paper Scissors game</a>
   </div>
   <div>
-    <a href="./todo-list/12-todo-list.html">Todo List</a>
+    <a href="./todo-list/">Todo List</a>
+  </div>
+  <div>
+    <a href="./stopwatch/">Stopwatch</a>
   </div>
 </body>
 </html>
